# Python_MBIT_API

project_api/: .coverage  README.md  main.py  pyproject.toml  pytest.ini
project_api/app/: auth.py  main.py  repositories.py
project_api/app/data/: users.txt
project_api/app/static/: style.css
project_api/app/templates/: about.html  index.html  login.html  register.html
project_api/tests/: conftest.py  test_auth.py  test_routes.py
project_scraper/: .coverage  pyproject-demo.txt  pyproject.toml  pytest.ini
project_scraper/scraper/: fetcher.py  main.py
project_scraper/tests/: test_fetcher_integration.py  test_fetcher_mock.py
